<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <!-- RecyclerView to show tasks -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fabAddTask"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/backgroundLight"
        android:contentDescription="@string/list_of_tasks"
        android:textColor="@color/textPrimary"
        app:layout_constraintEnd_toEndOf="parent" />
    <Switch
        android:id="@+id/switchDailyReminder"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/enable_daily_reminders"
        tools:ignore="MissingConstraints" />

    <!-- FloatingActionButton to add new task -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:contentDescription="@string/add_task"
        android:src="@drawable/ic_android_black_24dp"
        app:backgroundTint="@color/purple_500"
        app:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>